# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "rlse"
version = "0.1.0"
edition = "2021"

[lib]
name = "rlse"
path = "src/lib.rs"
crate-type = ["cdylib"]

[workspace]
members = [ "lib", "napi-server" , "wasm-client" ]

[dependencies]
napi = "2"
napi-derive = "2"
lib = { path = "./lib" }
napi-server = { path = "./napi-server" }
wasm-client = { path = "./wasm-client" }
