[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = "A browser(wasm) client for the rlse library"
license = "ISC"
authors = ["DL Redden <dl@rlse.com>"]
repository = "https://github.com/dlredden/rlse.git"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.99"
lib = { path = "../lib" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
