[package]
edition = "2021"
name = "napi-server"
version = "0.1.0"
description = "A Node.js client for the rlse library"
license = "ISC"
authors = ["DL Redden <dl@rlse.com>"]
repository = "https://github.com/dlredden/rlse.git"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.13", default-features = false, features = ["napi4"] }
napi-derive = "2.16.13"
lib = { path = "../lib" }

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
